# zerokv

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_TIPS.md  DOCS_INDEX.md  Dockerfile  GEMINI.md  LICENSE  PROJECT_INFO.md  README.md  TASKS.md  VERIFY.md  WORK_LOG.md  docker-compose.yaml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: integration-tests.yml
.specify/memory/: constitution.md
cmake/: zerokv-config.cmake.in  zerokv-targets.cmake.in  zerokvConfig.cmake.in
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GIT_SETUP_SUMMARY.md  INDEX.md  api_reference.md  dev-rdma-mac-qemu.md  development_schedule.md  meeting-001-requirements.md  meeting-002-architecture.md  meeting-003-details.md  meeting-004-implementation.md  team-decision-report.md  technical_design_document.md
docs/alps_kv_wrap/: README.md
docs/meetings/: meeting-minutes-001.md
docs/reports/: DELIVERY_PLAN_SUMMARY.txt  README_DELIVERY_PLAN.md  axon-rdma-kv-mvp.md  code-review-2026-03-30.md  current-axon-implementation.md  current-zerokv-implementation.md  pm-mvp-delivery-plan.md  pm-mvp-quick-reference.md  report-arch-design.md  report-arch-service-discovery-master-slave.md  report-arch-ucx-research.md  report-dev-interface.md  report-pm-requirements.md  test-strategy.md  todo-cluster-next-steps.md  zerokv-rdma-kv-mvp.md
docs/risk/: arch-hccl-feasibility.md  dev-hccl-plugin-compatibility.md  pm-ascend-business-impact.md  risk-assessment-ascend.md
examples/: CMakeLists.txt  alps_kv_bench.cpp  cpp_usage.cpp  embedded_client.cc  embedded_server.cc  example_basic.cc  kv_bench.cpp  kv_demo.cpp  kv_wait_fetch.cpp  message_kv_demo.cpp  mpi_send_recv_bench.cpp  ping_pong.cpp  python_example.py  python_usage.py  rdma_put_get.cpp  send_recv.cpp  simple_client.cpp  simple_server.cpp
examples/cmake/: CMakeLists.txt  README.md  main.cc
include/axon/: axon.h  cluster.h  config.h  endpoint.h  future.h  kv.h  memory.h  worker.h
include/p2p/: cluster.h  common.h  config.h  endpoint.h  future.h  memory.h  p2p.h  worker.h
include/yr/: alps_kv_api.h
include/zerokv/: batch.h  cache.h  checksum.h  client.h  client_v2.h  cluster.h  common.h  config.h  connection_pool.h  endpoint.h  future.h  handler.h  kv.h  logger.h  logging.h  memory.h  message_kv.h  metadata.h  metrics.h  protocol.h  retrier.h  server.h  status.h  storage.h  transport.h  ucx_control_client.h  ucx_control_server.h  util.h  worker.h  zerokv.h  zerokv_client.h  zerokv_monitor.h  zerokv_server.h  zerokv_types.h
monitoring/: docker-compose.yml
monitoring/alertmanager/: config.yml
monitoring/prometheus/: prometheus.yml
protos/: zerokv.proto
python/: pybind.cc  pyproject.toml  setup.py
python/axon/: __init__.py  _core.pyi
python/examples/: kv_example.py  usage.py
python/p2p/: __init__.py  _core.pyi
python/tests/: test_zerokv.py
python/zerokv/: __init__.py  _core.pyi  async_client.py  client.py
scripts/: build.sh  build_pkg_arm_remote.sh  build_pkg_x86_compile.sh  download_ucx.sh  package_source.sh  perf_experiments.py  quick_start.sh  release_verify.sh  release_verify_examples.sh  release_verify_lib.py  run_rdma_verify.sh
scripts/qemu_rdma/: build_pkg_focal.sh  provision.sh  run_test.sh  setup.sh  start_vms.sh  stop_vms.sh
scripts/rdma_sim/: Dockerfile  entrypoint.sh
specs/001-axon-transport-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-p2p-transport-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-plan-tasks/: quickstart.md  spec.md  tasks.md
specs/002-python-api/: spec.md  tasks.md
specs/003-sdk-integration/: plan.md  spec.md  tasks.md
specs/004-integration-test/: plan.md  quickstart.md  spec.md  tasks.md
specs/005-impl-comm-protocol/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
src/: cluster.cpp  config.cpp  endpoint.cpp  future.cpp  kv.cpp  memory.cpp  message_kv.cpp  status.cpp  worker.cpp
src/batch/: batch.cc
src/cache/: cache.cc
src/checksum/: checksum.cc
src/client/: client.cc  client_v2.cc  ucx_control_client.cpp
src/common/: logger.cpp  p2p_ucx_mock.cpp  p2p_ucx_mock.h  ucx_stub.cpp  ucx_stub.h
src/compat/: alps_kv_api.cpp  alps_kv_channel.cpp  alps_kv_channel.h
src/config/: config.cc
src/core/: bench_utils.cpp  metadata_store.cpp  metadata_store.h  node.cpp  protocol.cpp  server.cpp  tcp_framing.cpp  tcp_framing.h  tcp_transport.cpp
src/error/: retrier.cc
src/internal/: listener_addr.h  logging.cpp  logging.h  trace_log.h  ucx_context.h  ucx_memory.h  ucx_utils.h  ucx_worker.h
src/kv/: bench_utils.cpp  bench_utils.h  metadata_store.cpp  metadata_store.h  node.cpp  protocol.cpp  protocol.h  server.cpp  tcp_framing.cpp  tcp_framing.h  tcp_transport.cpp  tcp_transport.h
src/logging/: logging.cc
src/metadata/: metadata.cc
src/metrics/: metrics.cc
src/plugin/: hccl_plugin.cpp  (+1 more)
tests/: CMakeLists.txt
tests/benchmark/: bench_pingpong.cpp  bench_single_process.cpp  bench_throughput.cpp
tests/integration/: conftest.py  fixtures.py  test_alps_kv_bench.cpp  test_alps_kv_wrap.cpp  test_cluster.cc  test_cluster_discovery.cpp  test_connection.cpp  test_integration.cpp  test_kv_bench.cpp  test_kv_node.cpp  test_kv_server.cpp  test_loopback.cpp  test_message_kv.cpp  test_message_kv_demo.cpp  test_mpi_send_recv_bench.cpp  test_rdma.cpp  test_tag_messaging.cpp
tests/legacy/: example_basic  test_batch.cc  test_cache.cc  test_features.cc  test_fixed  test_fixed.cc  test_fixed_v2  test_fixed_v2.cc  test_integration.cc  test_simple.cc  test_storage_standalone.cc  test_util.cc
tests/perf/: test_performance.cpp
tests/performance/: benchmark_test.cc
tests/python/: test_perf_experiments.py  test_python_api_surface.py  test_release_verify.py
tests/unit/: test_cluster.cpp  test_config.cpp  test_future.cpp  test_kv_bench.cpp  test_kv_metadata_store.cpp  test_listener_addr.cpp  test_logging.cpp  test_memory.cpp  test_p2p_mock.cpp  test_status.cpp  test_storage.cc  test_storage_large.cc  test_ucx_control_client.cpp  test_ucx_control_server.cpp
(+90 files in other folders)
